<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.usjt.ads.desmob.atividades.ActivityC"
    android:background="@color/dark_red"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large"
        android:text="@string/activity_c"
        android:gravity="center"
        android:textColor="@color/light_red"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_a"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_b"
            android:layout_toRightOf="@id/btn_start_a"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish_c_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog"/>
    </RelativeLayout>

</LinearLayout>
