<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/dark_green"
    android:orientation="vertical"
    tools:context="br.usjt.ads.desmob.atividades.ActivityB">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_b"
        android:textSize="@dimen/font_large"
        android:gravity="center"
        android:textColor="@color/light_green"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btn_start_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/start_a"/>

        <Button
            android:id="@+id/btn_start_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/start_c"
            android:layout_toRightOf="@id/btn_start_a"/>

        <Button
            android:id="@+id/btn_finish_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/btn_finish_b_label"
            android:layout_toRightOf="@id/btn_start_c"/>

        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dialog"
            android:layout_toRightOf="@id/btn_finish_b"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle_method_list"
        android:textSize="@dimen/font_medium"
        android:layout_gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <TextView
            android:id="@+id/status_view_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dp"
            android:typeface="monospace"/>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="@string/activity_status"
        android:textColor="@color/light_blue" />

    <TextView
        android:id="@+id/status_view_all_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:textColor="@color/black"
        android:padding="4dp"
        android:typeface="monospace"/>


</LinearLayout>
