<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/espacamento_activity"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context="br.usjt.ads.desmob.atividades.ActivityA">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_a_label"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_large"
        android:textColor="@color/light_blue"
        android:paddingBottom="@dimen/espacamento_titulo"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/espacamento_titulo">

        <Button
            android:id="@+id/btn_start_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_b_label"
            android:onClick="startActivityB"/>

        <Button
            android:id="@+id/btn_start_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_c_label"
            android:layout_toRightOf="@id/btn_start_b"
            android:onClick="startActivityC"/>

        <Button
            android:id="@+id/btn_finish_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finish_a_label"
            android:layout_toRightOf="@id/btn_start_c"
            android:onClick="finishActivityA"/>

        <Button
            android:id="@+id/btn_start_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_dialog_label"
            android:layout_toRightOf="@id/btn_finish_a"
            android:onClick="startDialog"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="@string/lifecycle_method_list"
        android:textColor="@color/light_blue"
        android:paddingBottom="@dimen/espacamento_titulo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/status_view_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dp"
            android:typeface="monospace"/>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="@string/activity_status"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        android:padding="@dimen/status_activity"/>

    <TextView
        android:id="@+id/status_view_all_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:textColor="@color/black"
        android:padding="@dimen/status_activity"
        android:typeface="monospace"/>
</LinearLayout>
